#    SPDX-License-Identifier: Apache License 2.0
#
#    SPDX-FileCopyrightText: 2022 Western Digital Corporation or its affiliates.
#
#    Author: Jaco Hofmann (jaco.hofmann@wdc.com)

[package]
name = "bitload"
version = "0.1.0"
authors = ["Jaco Hofmann <jaco.hofmann@wdc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omnixtend-rs = { path = "../omnixtend-rs" }
log = "0.4.17"
snafu = "0.7.3"
env_logger = "0.9.1"
clap = {version = "4.0.18", features = ["derive"]}
pnet = {version = "0.31.0", features = ["std"]}
pnet_macros_support = "0.31.0"
ctrlc = "3.2.3"
crossbeam = "0.8.2"
log-panics = "2.1.0"
humansize = "2.1.0"
rand = "0.8.5"
rayon = "1.5.3"
memmap = "0.7.0"
