#    SPDX-License-Identifier: Apache License 2.0
#
#    SPDX-FileCopyrightText: 2022 Western Digital Corporation or its affiliates.
#
#    Author: Jaco Hofmann (jaco.hofmann@wdc.com)

[package]
name = "bitload"
version = "1.0.0"
authors = ["Jaco Hofmann <jaco.hofmann@wdc.com>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omnixtend-rs = { path = "../omnixtend-rs" }
log = "0.4.19"
snafu = "0.7.4"
env_logger = "0.10.0"
clap = { version = "4.3.11", features = ["derive"] }
pnet = { version = "0.33.0", features = ["std"] }
ctrlc = "3.4.0"
log-panics = "2.1.0"
humansize = "2.1.3"
rayon = "1.7.0"
memmap = "0.7.0"
