#    SPDX-License-Identifier: Apache License 2.0
#
#    SPDX-FileCopyrightText: 2022 Western Digital Corporation or its affiliates.
#
#    Author: Jaco Hofmann (jaco.hofmann@wdc.com)

[package]
name = "omnixtend_config"
version = "1.0.0"
authors = ["Jaco Hofmann <jaco.hofmann@wdc.com>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html 

[dependencies]
tapasco = { git = "https://github.com/esa-tu-darmstadt/tapasco.git", branch = "develop"}
log = "0.4.19"
snafu = "0.8.1"
env_logger = "0.11.3"
clap = { version = "4.3.11", features = ["derive"] }
ctrlc = "3.4.0"
prettytable-rs = "0.10.0"
pnet = "0.34.0"
